--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 }
 .items .item {
 	float: left;
-  width: 23%;
+  width: auto;
   margin: 8px;    
   text-transform: none;
   display: inline-block;    
