--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@ video {
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Out 2018</h6>
           <p class="color-sec">Iniciei minha trajetória na área de desenvolvimento web em 2016 no AquaRio nessa época eu atuava no suporte  mas sempre que tinha tempo me dedicava aos estudos eu começei aprendendo HTML, CSS e logo depois JavaScript, todos os dias tentava me especializar com novos métodos e tecnologias, foi então quando em 2017 comecei a criar alguns projetos com Node, Ruby e Rails Framework.</p>
           <hr>
-        </div>
+        </div><br>
         
       </div>
 
@@ -159,10 +159,10 @@ video {
           <h5 class="w3-opacity"><b>Universidade Estácio de Sá</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - 2020</h6>
           <p class="color-sec">Análise e desenvolvimento de sistemas. <span class="w3-tag w3-teal w3-round">Cursando</span></p>
-          <hr>
+          <hr><br>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Cursos e certifidações.</b></h5>
+          <h5 class="w3-opacity"><b>Cursos e Certifidações.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2019</h6>
           <div class="items">
             <a href="https://cursos.alura.com.br/user/yuri-duarte/course/bootstrap-criacao-single-page-responsiva/certificate" target="_blank">
