Altara nome da pasta principal

--- a/public/index.html
+++ b/public/index.html
@@ -7,67 +7,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style>
-  html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-  .items {
-    overflow: hidden; /* simple clearfix */
-  }
-  .color-pry {
-    color: #009688;
-  }
-  .color-sec {
-    color: #757575;
-  }
-  .items .item {
-    float: left;
-    width: auto;
-    margin: 8px;    
-    text-transform: none;
-    display: inline-block;    
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    border-radius: 10px;
-    user-select: none;
-    color: #757575;  
-    border-color: #009688;
-    color: #009688;
-  }
-  .items .item:hover {
-    color: #fff;
-    background: #009688;
-  }
-  .social-icons {
-    font-size: 28px;
-    margin: 5px 10px 5px 10px;
-    cursor: pointer;
-  }
-  video {
-    width: 100%;
-  }
-  .bg_video {
-    position: fixed; 
-    /* right: 0; 
-    bottom: 0; */
-    top: 0;
-    min-width: 100%; 
-    min-height: 100%;
-    width: auto; 
-    height: auto; 
-    z-index: -1000;
-    background: url('video/coding-crop.mp4');
-    background-size: cover; 
-  }
-  </style>
-  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/d00d965f5ce09a19430d3b17b/a8cac8999fa07be957ee7280b.js");</script>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body class="w3-light-grey">
   <!-- <video autoplay loop poster="polina.jpg" class="bg_video">    
