--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+  <script data-ad-client="ca-pub-8722023550436773" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body class="w3-light-grey">
   <!-- <video autoplay loop poster="polina.jpg" class="bg_video">    
